--- a/catkin_qt/src/ros_qt_demo/package.xml
+++ b/catkin_qt/src/ros_qt_demo/package.xml
@@ -7,11 +7,9 @@
      ros_qt_demo
 
   </description>
-  <maintainer email="chengyangkj@qq.com">chengyangkj</maintainer>
+  <maintainer email="chenling1@mailbox.tu-dresden.de">chenling</maintainer>
   <author>chengyangkj</author>
   <license>BSD</license>
-  <!-- <url type="bugtracker">https://github.com/chengyangkj/ros_qt_demo/issues</url> -->
-  <!-- <url type="repository">https://github.com/chengyangkj/ros_qt_demo</url> -->
 
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>qt_build</build_depend>
