--- a/catkin_qt/src/ros_qt_demo/CMakeLists.txt
+++ b/catkin_qt/src/ros_qt_demo/CMakeLists.txt
@@ -11,10 +11,14 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 ##############################################################################
 
 # qt_build provides the qt cmake glue, roscpp the comms for a default talker
-find_package(catkin REQUIRED COMPONENTS rviz roscpp sensor_msgs
+find_package(catkin REQUIRED COMPONENTS rviz roscpp rospy sensor_msgs
     cv_bridge
     std_msgs
     image_transport
+    geometry_msgs
+    tf2
+    tf2_ros
+    tf2_geometry_msgs
     )
 include_directories(${catkin_INCLUDE_DIRS})
 #add
